dom/media/AbstractMediaDecoder.h
@@ -25,6 +25,7 @@ namespace mozilla
 namespace layers
 {
   class ImageContainer;
+  class KnowsCompositor;
 } // namespace layers
 class MediaResource;
 class ReentrantMonitor;
@@ -65,6 +66,15 @@ public:
   // in order to update buffer ranges.
   // Return null if this decoder doesn't support the event.
   virtual MediaEventSource<void>* DataArrivedEvent()
+  {
+    return nullptr;
+  }
+
+  // Returns an event that will be notified when the owning document changes state
+  // and we might have a new compositor. If this new compositor requires us to
+  // recreate our decoders, then we expect the existing decoderis to return an
+  // error independently of this.
+  virtual MediaEventSource<RefPtr<layers::KnowsCompositor>>* CompositorUpdatedEvent()
   {
     return nullptr;
   }
